# Trident

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt
docs/: CHANGELOG.md  LESSONS.md  METRICS.md  PROJECT.md  README.md  TODO.md
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: dtype.h  half.h  tensor.cpp  tensor.h
tests/: CMakeLists.txt  test_tensor.cpp
